--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
   color: #111;
-  background: url('images/background.png') #edeff0;
+  background: url('svgs/background.svg') #edeff0;
+  background-size: 53px 50px;
 }
 
 #container {
@@ -45,6 +46,20 @@ header {
     line-height: 1em;
   }
 
+  .nav-icon {
+    width: 28px;
+    height: 24px;
+  }
+
+  .nav-icon:hover {
+     fill: #39add1;
+  }
+
+.logo {
+  width: 140px;
+  height: 120px;
+}
+
 main {
   padding-top: 50px;
 }
@@ -60,6 +75,8 @@ main {
       margin-right: 20px;
     }
       main li img {
+        width: 170px;
+        height: 170px;
         margin-bottom: 15px;
       }
       main li span {
@@ -74,4 +91,17 @@ footer {
   margin-top: 100px;
   padding-bottom: 30px;
   color: #ba8058;
+}
+
+@media (max-width: 419px) {
+  .logo-text {
+    display: none;
+  }
+  .logo::after {
+      content: "PAW PRINT KENNELS";
+      display: block;
+      color: black;
+      font-size: 1em;
+    }
+  }
 }
