--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@ a {
     color: #111;
   }
 
+  a:hover .st0 {
+     fill: #111; 
+  }
+
+
 header {
   padding-top: 10px;
 }
@@ -51,10 +56,6 @@ header {
     height: 24px;
   }
 
-  .st0:hover {
-    /* or #111?? */
-     fill: #39add1; 
-  }
 
 .logo {
   width: 140px;
