nav-location size
removed class nav-icon and added separate ids for the 3 icons. Used ids
to set icon size (location is slightly different dimensions from other
two)

--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,14 @@ header {
     line-height: 1em;
   }
 
-  .nav-icon {
+  #nav-heart,
+  #nav-contact {
     width: 28px;
+    height: 24px;
+  }
+
+  #nav-location {
+    width: 24px;
     height: 24px;
   }
 
