--- a/styles.css
+++ b/styles.css
@@ -99,27 +99,39 @@ main {
         margin-right: 0;
       }
 
-      .red .st0 {
+      .red .st0,
+      .sable .st3,
+      .black-and-tan .st0 {
         fill: #BA8058;
       }
-      .red .st1{fill:#FBFEFF;}
-      .red .st2{fill:#2D3339;}
-      .red .st3{fill:#EAAA7F;}
+      .red .st1,
+      .fawn .st1,
+      .sable .st1,
+      .black-and-tan .st2 {
+        fill:#FBFEFF;
+      }
+      .red .st2,
+      .fawn .st2,
+      .sable .st2,
+      .black-and-tan .st3 {
+        fill:#2D3339;
+      }
+      .red .st3,
+      .fawn .st0 {
+        fill:#EAAA7F;
+      }
 
-      .fawn .st0{fill:#EAAA7F;}
-  .fawn .st1{fill:#FBFEFF;}
-  .fawn .st2{fill:#2D3339;}
-  .fawn .st3{fill:#F4C6A6;}
+      .fawn .st3 {
+        fill:#F4C6A6;
+      }
 
-  .sable .st0{fill:#844B24;}
-  .sable .st1{fill:#FBFEFF;}
-  .sable .st2{fill:#2D3339;}
-  .sable .st3{fill:#BA8058;}
-
-  .black-and-tan .st0{fill:#BA8058;}
-  .black-and-tan .st1{fill:#52595F;}
-  .black-and-tan .st2{fill:#FBFEFF;}
-  .black-and-tan .st3{fill:#2D3339;}
+      .sable .st0 {
+        fill:#844B24;
+      }
+     
+      .black-and-tan .st1 {
+        fill:#52595F;
+      }
 
 footer {
   width: 100%;
