nav hover transform
added a skewY transform
set transition of 2s on the nav icons

--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,21 @@ a {
   text-decoration: none;
   color: #39add1;
   font-weight: 700;
+  transition: 2s;
   }
   a:hover {
     color: #111;
   }
 
+  a .st0 {
+    transition: 2s;
+    
+  }
+
   a:hover .st0 {
      fill: #111; 
+     /*transform-orgin: 50% 50%;*/
+     transform: skewY(0.5turn);
   }
 
 
